<resources>
    <string name="app_name">MoneyNote</string>
    <string name="input">Input</string>
    <string name="calendar">Calendar</string>
    <string name="report">Report</string>
    <string name="expense">Expense</string>
    <string name="note">Note</string>
    <string name="enter_here">Enter here</string>
    <string name="day">Day</string>
    <string name="categories">Categories</string>
    <string name="submit">Submit</string>
    <string name="please_enter_expense">Please enter expense</string>
    <string name="data_has_been_saved">Data has been saved</string>
    <string name="nothing_here">Nothing here!</string>
</resources>