<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraint_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f7f7f7"
        tools:context=".ui.main.MainActivity">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/llBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/bg_bottom_main"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/llInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imvInput"
                    android:layout_width="@dimen/_18ssp"
                    android:layout_height="@dimen/_18ssp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_pen" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/google_sans_medium"
                    android:text="@string/input"
                    android:textColor="@color/color_neutral_1"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCalendar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imvCalendar"
                    android:layout_width="@dimen/_18ssp"
                    android:layout_height="@dimen/_18ssp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_calendar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/google_sans_medium"
                    android:text="@string/calendar"
                    android:textColor="@color/color_neutral_1"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llReport"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imvReport"
                    android:layout_width="@dimen/_18ssp"
                    android:layout_height="@dimen/_18ssp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_report" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/google_sans_medium"
                    android:text="@string/report"
                    android:textColor="@color/color_neutral_1"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>